--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@ body{
 }
 
 .red{
-    background-color: red;
+    background-color: #CA462A;
     padding: 4%;
 }
 
 .blue{
-    background-color: blue;
+    background-color: #2A64CA;
     padding: 4%;
 }
 
